and now the same thing for pagelinks and more!

--- a/docudio/public/static/locales/cn/footer.json
+++ b/docudio/public/static/locales/cn/footer.json
@@ -1,4 +1,6 @@
 {
+    "cardtitle": "欢迎来到Docudio！",
     "Copyright © ": "版权所有©",
-    "Language": "语言"
+    "Language": "语言",
+    "downloads": "文档下载"
 }
