--- a/docudio/public/static/locales/cn/index.json
+++ b/docudio/public/static/locales/cn/index.json
@@ -4,6 +4,7 @@
     "funds": "我们正在寻找资金，并且正在寻找开发人员来帮助建立最好的Documentation Studio。",
     "kickstarter": "查看我们的Kickstarter",
     "contribute": "开始贡献！",
+    "cardtitle": "欢迎来到Docudio！",
     "signup": "注册获取Docudio版本和更新",
     "note": "很棒的产品更新；没有垃圾邮件。",
     "thankyou": "谢谢！",
