--- a/docudio/public/static/locales/de/footer.json
+++ b/docudio/public/static/locales/de/footer.json
@@ -1,4 +1,6 @@
 {
+    "cardtitle": "Willkommen bei Docudio!",
     "Copyright © ": "Copyright ©",
-    "Language": "Sprache"
+    "Language": "Sprache",
+    "downloads": "Docudio-Downloads"
 }
