--- a/docudio/public/static/locales/en/footer.json
+++ b/docudio/public/static/locales/en/footer.json
@@ -1,5 +1,6 @@
 {
-  
+  "cardtitle": "Welcome to Docudio!",
   "Copyright © ": "Copyright © ",
-  "Language": "Language"
+  "Language": "Language",
+  "downloads": "Docudio Downloads"
 }
