--- a/docudio/public/static/locales/en/index.json
+++ b/docudio/public/static/locales/en/index.json
@@ -4,6 +4,7 @@
   "funds": "We are Seeking Funds, and Looking for Developers to help build the best Documentation Studio.",
   "kickstarter": "Checkout our Kickstarter",
   "contribute": "Start Contributing! ",
+  "cardtitle": "Welcome to Docudio!",
   "signup": "Sign up for Docudio Releases and Updates",
   "note": "Awesome product updates; no spam.",
   "thankyou": "Thank you!",
