--- a/docudio/public/static/locales/es/footer.json
+++ b/docudio/public/static/locales/es/footer.json
@@ -1,4 +1,6 @@
 {
+    "cardtitle": "¡Bienvenido a Docudio!",
     "Copyright © ": "Copyright ©",
-    "Language": "Idioma"
+    "Language": "Idioma",
+    "downloads": "Descargas de Docudio"
 }
