--- a/docudio/public/static/locales/es/index.json
+++ b/docudio/public/static/locales/es/index.json
@@ -4,6 +4,7 @@
     "funds": "Buscamos fondos y buscamos desarrolladores que nos ayuden a crear el mejor estudio de documentación.",
     "kickstarter": "Echa un vistazo a nuestro Kickstarter",
     "contribute": "¡Empiece a contribuir!",
+    "cardtitle": "¡Bienvenido a Docudio!",
     "signup": "Regístrese para las versiones y actualizaciones de Docudio",
     "note": "Increíbles actualizaciones de productos; no es basura.",
     "thankyou": "¡Gracias!",
