--- a/docudio/public/static/locales/fr/footer.json
+++ b/docudio/public/static/locales/fr/footer.json
@@ -1,4 +1,6 @@
 {
+    "cardtitle": "Bienvenue dans Docudio!",
     "Copyright © ": "Copyright ©",
-    "Language": "Langue"
+    "Language": "Langue",
+    "downloads": "Téléchargements Docudio"
 }
