--- a/docudio/public/static/locales/fr/index.json
+++ b/docudio/public/static/locales/fr/index.json
@@ -4,6 +4,7 @@
     "funds": "Nous recherchons des fonds et recherchons des développeurs pour aider à créer le meilleur studio de documentation.",
     "kickstarter": "Découvrez notre Kickstarter",
     "contribute": "Commencez à contribuer!",
+    "cardtitle": "Bienvenue dans Docudio!",
     "signup": "Inscrivez-vous aux versions et mises à jour de Docudio",
     "note": "Mises à jour de produits impressionnantes; Pas de spam.",
     "thankyou": "Je vous remercie!",
