--- a/docudio/public/static/locales/jp/downloads.json
+++ b/docudio/public/static/locales/jp/downloads.json
@@ -1,5 +1,5 @@
 {
-    "title": "Docudioドキュメント",
+    "title": "Docudioダウンロード",
     "cardtitle": "Docudioへようこそ！",
     "statement": "それがどのように機能するかについてはすぐに戻ってきてください。"
 }
