--- a/docudio/public/static/locales/jp/footer.json
+++ b/docudio/public/static/locales/jp/footer.json
@@ -1,4 +1,6 @@
 {
+    "cardtitle": "Docudioへようこそ！",
     "Copyright © ": "Copyright©",
-    "Language": "言語"
+    "Language": "言語",
+    "downloads": "Docudioダウンロード"
 }
