--- a/docudio/public/static/locales/jp/index.json
+++ b/docudio/public/static/locales/jp/index.json
@@ -4,6 +4,7 @@
     "funds": "私たちは資金を求めており、最高のドキュメンテーションスタジオの構築を支援する開発者を探しています。",
     "kickstarter": "Kickstarterをチェックしてください",
     "contribute": "貢献を始めましょう！",
+    "cardtitle": "Docudioへようこそ！",
     "signup": "Docudioのリリースとアップデートにサインアップする",
     "note": "素晴らしい製品アップデート。スパム禁止。",
     "thankyou": "ありがとうございました！",
