--- a/docudio/public/static/locales/jp/start.json
+++ b/docudio/public/static/locales/jp/start.json
@@ -1,5 +1,5 @@
 {
-    "title": "Docudioドキュメント",
+    "title": "Docudioはじめに",
     "cardtitle": "Docudioへようこそ！",
     "statement": "それがどのように機能するかについてはすぐに戻ってきてください。"
 }
