--- a/docudio/public/static/locales/pt/footer.json
+++ b/docudio/public/static/locales/pt/footer.json
@@ -1,4 +1,6 @@
 {
+    "cardtitle": "Bem-vindo ao Docudio!",
     "Copyright © ": "Copyright ©",
-    "Language": "Língua"
+    "Language": "Língua",
+    "downloads": "Downloads de docudio"
 }
