--- a/docudio/public/static/locales/pt/index.json
+++ b/docudio/public/static/locales/pt/index.json
@@ -4,6 +4,7 @@
     "funds": "Estamos em busca de fundos e de desenvolvedores para ajudar a construir o melhor estúdio de documentação.",
     "kickstarter": "Confira nosso Kickstarter",
     "contribute": "Comece a contribuir!",
+    "cardtitle": "Bem-vindo ao Docudio!",
     "signup": "Inscreva-se para lançamentos e atualizações do Docudio",
     "note": "Atualizações de produto incríveis; sem spam.",
     "thankyou": "Obrigado!",
