--- a/docudio/public/static/locales/de/index.json
+++ b/docudio/public/static/locales/de/index.json
@@ -4,6 +4,7 @@
     "funds": "Wir suchen nach Geldern und suchen nach Entwicklern, um das beste Dokumentationsstudio zu erstellen.",
     "kickstarter": "Testen Sie unseren Kickstarter",
     "contribute": "Fangen Sie an beizutragen!",
+    "cardtitle": "Willkommen bei Docudio!",
     "signup": "Melden Sie sich für Docudio-Versionen und -Updates an",
     "note": "Fantastische Produktupdates; kein Spam.",
     "thankyou": "Dankeschön!",
