--- a/docudio/public/static/locales/de/start.json
+++ b/docudio/public/static/locales/de/start.json
@@ -1,5 +1,5 @@
 {
-    "title": "Docudio-Dokumentation",
+    "title": "Docudio Erste Schritte",
     "cardtitle": "Willkommen bei Docudio!",
     "statement": "Komm bald zurück, um zu erfahren, wie es funktioniert."
 }
