--- a/docudio/public/static/locales/en/docs.json
+++ b/docudio/public/static/locales/en/docs.json
@@ -1,1 +1,1 @@
-{"title": "Docudio Documentation","statement": "Come back soon for how it works."}
+{"title": "Docudio Documentation",  "cardtitle": "Welcome to Docudio!",  "statement": "Come back soon for how it works."}
