--- a/docudio/public/static/locales/en/reachout.json
+++ b/docudio/public/static/locales/en/reachout.json
@@ -1,1 +1,2 @@
-{"slack": "Docudio Slack","join": "Join our slack and ask questions/ask to join! "}
+{"slack": "Docudio Slack",  "cardtitle": "Welcome to Docudio!",
+  "join": "Join our slack and ask questions/ask to join! "}
