--- a/docudio/public/static/locales/es/start.json
+++ b/docudio/public/static/locales/es/start.json
@@ -1,5 +1,5 @@
 {
-    "title": "Documentación de Docudio",
+    "title": "Primeros pasos con Docudio",
     "cardtitle": "¡Bienvenido a Docudio!",
     "statement": "Vuelve pronto para saber cómo funciona."
 }
