--- a/docudio/public/static/locales/fr/start.json
+++ b/docudio/public/static/locales/fr/start.json
@@ -1,5 +1,5 @@
 {
-    "title": "Documentation Docudio",
+    "title": "Prise en main de Docudio",
     "cardtitle": "Bienvenue dans Docudio!",
     "statement": "Revenez bientôt pour savoir comment cela fonctionne."
 }
