--- a/docudio/public/static/locales/kr/footer.json
+++ b/docudio/public/static/locales/kr/footer.json
@@ -1,4 +1,6 @@
 {
+    "cardtitle": "Docudio에 오신 것을 환영합니다!",
     "Copyright © ": "저작권 ©",
-    "Language": "언어"
+    "Language": "언어",
+    "downloads": "Docudio 다운로드"
 }
