--- a/docudio/public/static/locales/kr/index.json
+++ b/docudio/public/static/locales/kr/index.json
@@ -4,6 +4,7 @@
     "funds": "우리는 자금을 찾고 있으며 최고의 문서 스튜디오를 구축하는 데 도움을 줄 개발자를 찾고 있습니다.",
     "kickstarter": "Kickstarter 확인",
     "contribute": "기여 시작!",
+    "cardtitle": "Docudio에 오신 것을 환영합니다!",
     "signup": "Docudio 릴리스 및 업데이트에 등록",
     "note": "멋진 제품 업데이트; 스팸이 없습니다.",
     "thankyou": "감사합니다!",
