--- a/docudio/public/static/locales/kr/start.json
+++ b/docudio/public/static/locales/kr/start.json
@@ -1,5 +1,5 @@
 {
-    "title": "Docudio 문서",
+    "title": "Docudio 시작하기",
     "cardtitle": "Docudio에 오신 것을 환영합니다!",
     "statement": "작동 방식에 대해 곧 다시 방문하십시오."
 }
