--- a/docudio/public/static/locales/pt/downloads.json
+++ b/docudio/public/static/locales/pt/downloads.json
@@ -1,5 +1,5 @@
 {
-    "title": "Documentação Docudio",
+    "title": "Downloads de docudio",
     "cardtitle": "Bem-vindo ao Docudio!",
     "statement": "Volte logo para ver como funciona."
 }
