--- a/docudio/public/static/locales/pt/reachout.json
+++ b/docudio/public/static/locales/pt/reachout.json
@@ -1,4 +1,5 @@
 {
     "slack": "Docudio Slack",
+    "cardtitle": "Bem-vindo ao Docudio!",
     "join": "Junte-se à nossa folga e faça perguntas / peça para participar!"
 }
