--- a/docudio/public/static/locales/en/footer.json
+++ b/docudio/public/static/locales/en/footer.json
@@ -2,5 +2,6 @@
   "cardtitle": "Welcome to Docudio!",
   "Copyright © ": "Copyright © ",
   "Language": "Language",
-  "downloads": "Docudio Downloads"
+  "downloads": "Docudio Downloads",
+  "Docudio": "Docudio"
 }
