--- a/docudio/public/static/locales/en/pagelinks.json
+++ b/docudio/public/static/locales/en/pagelinks.json
@@ -6,6 +6,7 @@
   "Resources": "Resources",
   "Examples": "Examples",
   "Blog": "Blog",
-  "Github": "Github"
+  "Github": "Github",
+  "Cloud": "Cloud Services"
 
 }
