--- a/docudio/public/static/locales/ZH-cn/footer.json
+++ b/docudio/public/static/locales/ZH-cn/footer.json
@@ -2,5 +2,6 @@
     "cardtitle": "欢迎来到Docudio！",
     "Copyright © ": "版权所有©",
     "Language": "语言",
-    "downloads": "文档下载"
+    "downloads": "文档下载",
+    "Docudio": "多库迪奥"
 }
