--- a/docudio/public/static/locales/de/index.json
+++ b/docudio/public/static/locales/de/index.json
@@ -7,7 +7,7 @@
     "cardtitle": "Willkommen bei Docudio!",
     "signup": "Melden Sie sich für Docudio-Versionen und -Updates an",
     "note": "Fantastische Produktupdates; kein Spam.",
-    "thankyou": "Dankeschön!",
+    "thankyou": "Vielen Dank!",
     "email": "Email",
     "tooltip": "Geben Sie Ihre vollständige E-Mail-Adresse ein",
     "submit": "einreichen",
