--- a/docudio/public/static/locales/en/downloads.json
+++ b/docudio/public/static/locales/en/downloads.json
@@ -1,2 +1,2 @@
 {"title": "Docudio Downloads",  "cardtitle": "Welcome to Docudio!",
-  "statement": "Come back soon for how it works."}
+  "statement": "Come back soon for downloads."}
