--- a/docudio/public/static/locales/es/footer.json
+++ b/docudio/public/static/locales/es/footer.json
@@ -2,5 +2,6 @@
     "cardtitle": "¡Bienvenido a Docudio!",
     "Copyright © ": "Copyright ©",
     "Language": "Idioma",
-    "downloads": "Descargas de Docudio"
+    "downloads": "Descargas de Docudio",
+    "Docudio": "Docudio"
 }
