--- a/docudio/public/static/locales/fr/footer.json
+++ b/docudio/public/static/locales/fr/footer.json
@@ -2,5 +2,6 @@
     "cardtitle": "Bienvenue dans Docudio!",
     "Copyright © ": "Copyright ©",
     "Language": "Langue",
-    "downloads": "Téléchargements Docudio"
+    "downloads": "Téléchargements Docudio",
+    "Docudio": "Docudio"
 }
