--- a/docudio/public/static/locales/fr/index.json
+++ b/docudio/public/static/locales/fr/index.json
@@ -7,7 +7,7 @@
     "cardtitle": "Bienvenue dans Docudio!",
     "signup": "Inscrivez-vous aux versions et mises à jour de Docudio",
     "note": "Mises à jour de produits impressionnantes; Pas de spam.",
-    "thankyou": "Je vous remercie!",
+    "thankyou": "Merci!",
     "email": "Email",
     "tooltip": "Tapez votre e-mail complet",
     "submit": "Soumettre",
