--- a/docudio/public/static/locales/ja/footer.json
+++ b/docudio/public/static/locales/ja/footer.json
@@ -2,5 +2,6 @@
     "cardtitle": "Docudioへようこそ！",
     "Copyright © ": "Copyright©",
     "Language": "言語",
-    "downloads": "Docudioダウンロード"
+    "downloads": "Docudioダウンロード",
+    "Docudio": "ドクディオ"
 }
