--- a/docudio/public/static/locales/ko/footer.json
+++ b/docudio/public/static/locales/ko/footer.json
@@ -2,5 +2,6 @@
     "cardtitle": "Docudio에 오신 것을 환영합니다!",
     "Copyright © ": "저작권 ©",
     "Language": "언어",
-    "downloads": "Docudio 다운로드"
+    "downloads": "Docudio 다운로드",
+    "Docudio": "Docudio"
 }
