--- a/docudio/public/static/locales/ko/pagelinks.json
+++ b/docudio/public/static/locales/ko/pagelinks.json
@@ -6,5 +6,6 @@
     "Resources": "자원",
     "Examples": "예",
     "Blog": "블로그",
-    "Github": "Github"
+    "Github": "Github",
+    "Cloud": "클라우드 서비스"
 }
