--- a/docudio/public/static/locales/pt/footer.json
+++ b/docudio/public/static/locales/pt/footer.json
@@ -2,5 +2,6 @@
     "cardtitle": "Bem-vindo ao Docudio!",
     "Copyright © ": "Copyright ©",
     "Language": "Língua",
-    "downloads": "Downloads de docudio"
+    "downloads": "Downloads de docudio",
+    "Docudio": "Docudio"
 }
