--- a/docudio/public/static/locales/pt/pagelinks.json
+++ b/docudio/public/static/locales/pt/pagelinks.json
@@ -6,5 +6,6 @@
     "Resources": "Recursos",
     "Examples": "Exemplos",
     "Blog": "Blog",
-    "Github": "Github"
+    "Github": "Github",
+    "Cloud": "Serviços na nuvem"
 }
