--- a/docudio/public/static/locales/ZH-cn/pagelinks.json
+++ b/docudio/public/static/locales/ZH-cn/pagelinks.json
@@ -6,5 +6,6 @@
     "Resources": "资源资源",
     "Examples": "例子",
     "Blog": "博客",
-    "Github": "Github"
+    "Github": "Github",
+    "Cloud": "云服务"
 }
