--- a/docudio/public/static/locales/de/downloads.json
+++ b/docudio/public/static/locales/de/downloads.json
@@ -1,5 +1,5 @@
 {
     "title": "Docudio-Downloads",
     "cardtitle": "Willkommen bei Docudio!",
-    "statement": "Komm bald zurück, um zu erfahren, wie es funktioniert."
+    "statement": "Kommen Sie bald zum Download zurück."
 }
