--- a/docudio/public/static/locales/de/footer.json
+++ b/docudio/public/static/locales/de/footer.json
@@ -2,5 +2,6 @@
     "cardtitle": "Willkommen bei Docudio!",
     "Copyright © ": "Copyright ©",
     "Language": "Sprache",
-    "downloads": "Docudio-Downloads"
+    "downloads": "Docudio-Downloads",
+    "Docudio": "Docudio"
 }
