--- a/docudio/public/static/locales/de/pagelinks.json
+++ b/docudio/public/static/locales/de/pagelinks.json
@@ -6,5 +6,6 @@
     "Resources": "Ressourcen",
     "Examples": "Beispiele",
     "Blog": "Blog",
-    "Github": "Github"
+    "Github": "Github",
+    "Cloud": "Cloud-Services"
 }
