--- a/docudio/public/static/locales/es/downloads.json
+++ b/docudio/public/static/locales/es/downloads.json
@@ -1,5 +1,5 @@
 {
     "title": "Descargas de Docudio",
     "cardtitle": "¡Bienvenido a Docudio!",
-    "statement": "Vuelve pronto para saber cómo funciona."
+    "statement": "Vuelve pronto para descargas."
 }
