--- a/docudio/public/static/locales/fr/downloads.json
+++ b/docudio/public/static/locales/fr/downloads.json
@@ -1,5 +1,5 @@
 {
     "title": "Téléchargements Docudio",
     "cardtitle": "Bienvenue dans Docudio!",
-    "statement": "Revenez bientôt pour savoir comment cela fonctionne."
+    "statement": "Revenez bientôt pour les téléchargements."
 }
