--- a/docudio/public/static/locales/fr/pagelinks.json
+++ b/docudio/public/static/locales/fr/pagelinks.json
@@ -6,5 +6,6 @@
     "Resources": "Ressources",
     "Examples": "Exemples",
     "Blog": "Blog",
-    "Github": "Github"
+    "Github": "Github",
+    "Cloud": "Services Cloud"
 }
