--- a/docudio/public/static/locales/ja/downloads.json
+++ b/docudio/public/static/locales/ja/downloads.json
@@ -1,5 +1,5 @@
 {
     "title": "Docudioダウンロード",
     "cardtitle": "Docudioへようこそ！",
-    "statement": "それがどのように機能するかについてはすぐに戻ってきてください。"
+    "statement": "ダウンロードのためにすぐに戻ってきてください。"
 }
