--- a/docudio/public/static/locales/ja/pagelinks.json
+++ b/docudio/public/static/locales/ja/pagelinks.json
@@ -6,5 +6,6 @@
     "Resources": "リソース",
     "Examples": "例",
     "Blog": "ブログ",
-    "Github": "Github"
+    "Github": "Github",
+    "Cloud": "クラウドサービス"
 }
