--- a/docudio/public/static/locales/ko/downloads.json
+++ b/docudio/public/static/locales/ko/downloads.json
@@ -1,5 +1,5 @@
 {
     "title": "Docudio 다운로드",
     "cardtitle": "Docudio에 오신 것을 환영합니다!",
-    "statement": "작동 방식에 대해 곧 다시 방문하십시오."
+    "statement": "다운로드를 위해 곧 돌아 오십시오."
 }
